# superpos-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: superpos-app-integration.md
src/superpos_mcp/: __init__.py  cli.py  client.py  config.py  server.py
tests/: conftest.py  fake_superpos.py  live_drive.py  smoke_stdio.py  test_cli.py  test_client.py  test_server.py
